# genai-rag-service

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
adapters/: __init__.py
adapters/embeddings/: mock.py
adapters/storage/: memory.py
adapters/vector_store/: memory.py
app/: __init__.py  dependencies.py  main.py
app/api/: health.py  rag.py
app/core/: logging.py  settings.py
mcp_tools/: __init__.py  rag_ingest.py  rag_search.py
rag/: __init__.py  schemas.py
rag/ingestion/: __init__.py  chunker.py  pipeline.py
rag/retrieval/: __init__.py  search.py
src/genai_rag_service/: __init__.py
src/genai_rag_service/adapters/: __init__.py
src/genai_rag_service/adapters/embedding/: __init__.py  mock.py
src/genai_rag_service/adapters/storage/: __init__.py  memory.py
src/genai_rag_service/adapters/vector/: __init__.py  memory.py
src/genai_rag_service/api/: __init__.py  app.py
src/genai_rag_service/api/middleware/: __init__.py  logging.py  tracing.py
src/genai_rag_service/api/routes/: health.py  tools.py
src/genai_rag_service/api/schemas/: __init__.py
src/genai_rag_service/chunking/: __init__.py  base.py  config.py  fixed_size.py  recursive.py
src/genai_rag_service/config/: __init__.py  settings.py
src/genai_rag_service/domain/: __init__.py  document.py  embedding.py  ingestion.py  retrieval.py
src/genai_rag_service/observability/: __init__.py  logging.py
src/genai_rag_service/ports/: __init__.py  embedding.py  storage.py  vector_store.py
src/genai_rag_service/services/: __init__.py  ingestion.py  retrieval.py
src/genai_rag_service/tools/: __init__.py  rag_ingest.py  rag_search.py  registry.py
tests/: conftest.py
tests/integration/: test_ingestion.py  test_retrieval.py
tests/unit/: test_chunking.py  test_domain.py
