[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genai-rag-service"
version = "0.1.0"
description = "RAG service for document retrieval and grounding in the GenAI platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "GenAI Platform Team" }
]
keywords = ["rag", "genai", "retrieval", "embeddings", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "genai-mcp-core",              # Internal dependency - MCP protocol
    "fastapi>=0.109.0",            # HTTP framework
    "uvicorn[standard]>=0.27.0",   # ASGI server
    "pydantic>=2.5.0",             # Validation at API boundary
    "pydantic-settings>=2.1.0",    # Environment configuration
    "structlog>=24.1.0",           # Structured logging
    "httpx>=0.26.0",               # Async HTTP client
    "tiktoken>=0.5.0",             # Token counting for chunking
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.14",
]

# Azure adapters (optional)
azure = [
    "azure-storage-blob>=12.19.0",
    "azure-search-documents>=11.4.0",
    "azure-identity>=1.15.0",
]

# OpenAI embedding provider (optional)
openai = [
    "openai>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/genai-platform/genai-rag-service"
Documentation = "https://github.com/genai-platform/genai-rag-service#readme"
Repository = "https://github.com/genai-platform/genai-rag-service.git"

[tool.hatch.build.targets.wheel]
packages = ["src/genai_rag_service"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
