[project]
name = "genai-rag-service"
version = "0.1.0"
description = "RAG service for GenAI platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "genai-mcp-core",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "httpx>=0.26.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.14",
]
azure = [
    "azure-search-documents>=11.4.0",
    "azure-storage-blob>=12.19.0",
    "azure-identity>=1.15.0",
]
openai = [
    "openai>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag", "adapters", "mcp_tools", "app"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
